# Photonizer

./: .clang-tidy  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt
bench/gbench/: CMakeLists.txt
bench/kd-tree/: CMakeLists.txt  bench.cc
doc/: Doxyfile
doc/examples/: scene-usage.cc
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/cli/: CMakeLists.txt
lib/gsl/: CMakeLists.txt
lib/misc/: CMakeLists.txt  chrono.hh  color.cc  color.hh  color.hxx  heap.hh  heap.hxx  math.hh  ray.cc  ray.hh  ray.hxx  vector3.cc  vector3.hh  vector3.hxx
lib/objloader/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
samples/: advanced-scene.json  cornell.json  cornell2.json  cubes.json  dragon.json  first_scene.json  glass.json  potion.json  room.json  sphere-normal-edit.json  teapot-simplified.json  water-pen.json
samples/meshes/: Potion.mtl  cornellbox.mtl  cube.mtl  glass-sphere.mtl  metal-sphere.mtl  pen.mtl  plane.mtl  room.mtl  sphere-normal-edit.mtl  sphere.mtl  tiny-glass-sphere.mtl  water.mtl  weird.mtl
src/: CMakeLists.txt  photonizer.cc  raytracer.cc  sample.cc
src/cli/: CMakeLists.txt  photonizer-cli.cc  photonizer-cli.hh  photonizer-command.cc  photonizer-command.hh
src/core/: CMakeLists.txt  heap.hh  heap.hxx  kd-tree.hh  kd-tree.hxx  point-meta.hh  ray-caster.hh  ray-caster.hxx
src/core/detail/: brown.hh  brown.hxx  point-comparator.hh
src/image/: CMakeLists.txt  heatmap.hh  heatmap.hxx  hsv.hh  hsv.hxx  image-rgb.hh  image-rgb.hxx  image-writer.hh  image.hh  image.hxx  ppm-writer.hh  ppm-writer.hxx  rgb.hh  rgb.hxx
src/math/: CMakeLists.txt  math.hh
src/photon_map/: CMakeLists.txt  abstract-photon-tracer.cc  abstract-photon-tracer.hh  brown.hh  brown.hxx  caustics-tracer.cc  caustics-tracer.hh  cli.cc  cli.hh  heap.hh  heap.hxx  helpers.hh  kd-tree.hh  kd-tree.hxx  libphoton.cc  libphoton.hh  photon-map.hh  photon-map.hxx  photon-tracer.cc  photon-tracer.hh  photon-tracer.hxx  point-meta.hh
src/photon_map/detail/: brown-algorithm.hh  brown-algorithm.hxx  brown.hh  brown.hxx  kd-node.hh  kd-node.hxx  point-comparator.hh
src/raytracer/: CMakeLists.txt  cli.cc  cli.hh  density-tracer.cc  density-tracer.hh  libraytracer.hh  libraytracer.hxx  ray-caster.hh  ray-caster.hxx  ray-tracer.cc  ray-tracer.hh  raytracer.cc  raytracer.hh  shadow-tracer.cc  shadow-tracer.hh
src/scene/: CMakeLists.txt  abstract-light.hh  ambient-light.hh  camera.cc  camera.hh  camera.hxx  directional-light.hh  libscene.cc  libscene.hh  material.hh  material.hxx  mesh-object.hh  mesh.cc  mesh.hh  mesh.hxx  object.hh  object.hxx  point-light.hh  polygon.hh  scene.hh  scene.hxx  sphere.hh  square-light.hh
src/scene/detail/: light-factory.hh  light-factory.hxx  mesh-impl.hh  mesh-manager.cc  mesh-manager.hh  mesh-storage.cc  mesh-storage.hh  object-factory.cc  object-factory.hh  scene-builder.cc  scene-builder.hh  utils.hh
tests/: CMakeLists.txt
tests/brown/: CMakeLists.txt  main.cc
tests/gtest/: CMakeLists.txt
tests/math/: CMakeLists.txt  math-tests.cc
tests/photon_map/: CMakeLists.txt  kd-tree.cc
